--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
       crossorigin="anonymous"
     />
     <link href="css/style.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap");
     </style>
-    <title>OLARM</title>
+    <title>Olarm</title>
   </head>
   <body>
-    <header>
+    <header class="back-img">
       <div class="container">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
           <div class="container-fluid">
@@ -56,37 +57,61 @@
                       >Meet Olarm</a
                     >
                   </li>
-                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item" href="#">Action</a></li>
-                    <li>
-                      <a class="dropdown-item" href="#">Another action</a>
-                    </li>
-                    <li><hr class="dropdown-divider" /></li>
-                    <li>
-                      <a class="dropdown-item" href="#">Something else here</a>
-                    </li>
-                  </ul>
-                </li>
               </ul>
             <div>
                 <button type="button" class="btn btn-primary btn-sm">Sign up</button>
                 <button type="button" class="btn btn-secondary btn-sm">Sign in</button>
             </div>
-              </form>
+      
             </div>
           </div>
         </nav>
+        <div class="row">
+          <div class="col-sm-12">
+            <div class="hero">
+              <div class="col-sm-1">
+                <div class="hero-icons">
+                  <i class="fab fa-google"></i>
+                  <i class="fab fa-twitter"></i>
+                  <i class="fab fa-facebook-f"></i>
+                </div>
+              </div>
+              <div class="col-sm-11">
+                <div class="first-quote">
+                  <h1 class="world-text">World's <span class="red">Smartest</span><span class="nextline">Home Security</span> </h1>
+                  <p class="small-text">Unique security experiences with more than 300,000 clients,
+                    <span class="nextline">Simple Installation, Convenience & Free Monitoring</span></p>
+                  <button type="button" class="btn btn-danger">Visit Shop</button>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </header>
-    <main>
-        <div class="back-img"></div>
-        <div class="first-quote">
-            <div class="middle-quote"> 
-                <h1 class="world-text">World's <span class="red">Smartest</span> <span class="nextline">Home Security</span> </h1>
-                <h3 class="small-text">Unique security experiences with more than 300,000 clients, Simple Installation, Convenience & Free Monitoring</h3>
-                <button type="button" class="btn btn-danger">Visit Shop</button>
+    
+    <main class="container">
+
+        <!-------VIDPAGE--------> 
+        <div class="vid_header">
+          <p class="vid-small-text">Tailored Total Home Protection</p>
+          <p class="vid-big-text">Next Generation Home Alarm System</p>
+          </div>
+            <div class="row">
+              <div class="col-sm-12">
+                <div class="col-sm-8">
+                  <div class="board1"></div>
+                </div>
+                <div class= "col-sm-4">
+                  <div class="board2"></div>
+                </div>
+                <div class= "col-sm-8">
+                  <div class="board3"></div>
+                </div>
+                <div class= "col-sm-4">
+                <div class="board4"></div>
+              </div>
             </div>
-        </div>
+          </div>
     </main>
 
     <script
