--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
     <header class="back-img">
       <div class="container">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-          <div class="container-fluid">
             <div class="logo-div">
               <img class="logo" src="/img/olarm_logo.png" />
             </div>
@@ -38,44 +37,28 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#"
-                    >Home</a
-                  >
-                </li>
+                  <a class="nav-link active" aria-current="page" href="#">Home</a></li>
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#"
-                    >Features</a
-                  >
-                </li>
+                  <a class="nav-link active" aria-current="page" href="#">Features</a></li>
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#"
-                    >Plans</a
-                  >
-                </li>
+                  <a class="nav-link active" aria-current="page" href="#">Plans</a></li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#"
-                      >Meet Olarm</a
-                    >
-                  </li>
+                  <a class="nav-link active" aria-current="page" href="#">Meet Olarm</a></li>
               </ul>
-            <div>
-                <button type="button" class="btn btn-primary btn-sm">Sign up</button>
-                <button type="button" class="btn btn-secondary btn-sm">Sign in</button>
+              <button type="button" class="btn btn-primary btn-sm">Sign up</button>
+              <button type="button" class="btn btn-secondary btn-sm">Sign in</button>
             </div>
-      
-            </div>
-          </div>
         </nav>
         <div class="row">
           <div class="col-sm-12">
             <div class="hero">
-              <div class="col-sm-1">
-                <div class="hero-icons">
-                  <i class="fab fa-google"></i>
-                  <i class="fab fa-twitter"></i>
-                  <i class="fab fa-facebook-f"></i>
+                <div class="col-sm-1">
+                  <div class="hero-icons">
+                    <i class="fab fa-google"></i>
+                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-facebook-f"></i>
+                  </div>
                 </div>
-              </div>
               <div class="col-sm-11">
                 <div class="first-quote">
                   <h1 class="world-text">World's <span class="red">Smartest</span><span class="nextline">Home Security</span> </h1>
@@ -86,32 +69,31 @@
             </div>
           </div>
         </div>
-      </div>
     </header>
-    
-    <main class="container">
-
+  <main>
         <!-------VIDPAGE--------> 
-        <div class="vid_header">
-          <p class="vid-small-text">Tailored Total Home Protection</p>
-          <p class="vid-big-text">Next Generation Home Alarm System</p>
-          </div>
-            <div class="row">
-              <div class="col-sm-12">
-                <div class="col-sm-8">
-                  <div class="board1"></div>
+        <div class="container">
+          <div class="vid_header">
+            <p class="vid-small-text">Tailored Total Home Protection</p>
+            <p class="vid-big-text">Next Generation Home Alarm System</p>
+            </div>
+              <div class="row">
+                <div class="col-sm-12">
+                  <div class="col-sm-8">
+                    <div class="board1"></div>
+                  </div>
+                  <div class= "col-sm-4">
+                    <div class="board2"></div>
+                  </div>
+                  <div class= "col-sm-8">
+                    <div class="board3"></div>
+                  </div>
+                  <div class= "col-sm-4">
+                  <div class="board4"></div>
                 </div>
-                <div class= "col-sm-4">
-                  <div class="board2"></div>
-                </div>
-                <div class= "col-sm-8">
-                  <div class="board3"></div>
-                </div>
-                <div class= "col-sm-4">
-                <div class="board4"></div>
               </div>
             </div>
-          </div>
+        </div>
     </main>
 
     <script
