--- a/index.html
+++ b/index.html
@@ -71,30 +71,35 @@
         </div>
     </header>
   <main>
-        <!-------VIDPAGE--------> 
-        <div class="container">
-          <div class="vid_header">
-            <p class="vid-small-text">Tailored Total Home Protection</p>
-            <p class="vid-big-text">Next Generation Home Alarm System</p>
-            </div>
-              <div class="row">
-                <div class="col-sm-12">
-                  <div class="col-sm-8">
-                    <div class="board1"></div>
+    <!-------VIDPAGE--------> 
+    <div class="container">
+      <div class="vid_header">
+        <p class="vid-small-text">Tailored Total Home Protection</p>
+        <p class="vid-big-text">Next Generation Home Alarm System</p>
+        </div>
+            <div class="row">
+             
+                <div class="col-sm-8">
+                  <div class="board1">
+                    <div class="textholder1">
+                      <p class="board1-maintext">Auto Arming | Das-arming</p>
+                      <p class="board1-subtext">Watch Now</p>
+                    </div>
                   </div>
-                  <div class= "col-sm-4">
-                    <div class="board2"></div>
-                  </div>
-                  <div class= "col-sm-8">
-                    <div class="board3"></div>
-                  </div>
-                  <div class= "col-sm-4">
-                  <div class="board4"></div>
                 </div>
+                <div class= "col-sm-4">
+                  <div class="board2"></div>
+                </div>
+                <div class= "col-sm-4">
+                  <div class="board3"></div>
+                </div>
+                <div class= "col-sm-8">
+                  <div class="board4"></div>
               </div>
             </div>
         </div>
-    </main>
+    </div>
+  </main>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
