--- a/index.html
+++ b/index.html
@@ -71,34 +71,79 @@
         </div>
     </header>
   <main>
-    <!-------VIDPAGE--------> 
+<!-------VIDPAGE--------> 
     <div class="container">
       <div class="vid_header">
         <p class="vid-small-text">Tailored Total Home Protection</p>
         <p class="vid-big-text">Next Generation Home Alarm System</p>
         </div>
             <div class="row">
-             
                 <div class="col-sm-8">
                   <div class="board1">
-                    <div class="textholder1">
-                      <p class="board1-maintext">Auto Arming | Das-arming</p>
-                      <p class="board1-subtext">Watch Now</p>
+                    <div class="playbutton">
+                      <img src="/img/play.png" alt="">
+                    </div>
+                    <div class="textholder">
+                      <h3 class="vid-maintext">Auto Arming | Das-arming</h3>
+                      <p class="vid-subtext">Watch Now</p>
                     </div>
                   </div>
                 </div>
                 <div class= "col-sm-4">
-                  <div class="board2"></div>
+                  <div class="board2">
+                    <div class="playbutton">
+                      <img src="/img/play.png" alt="">
+                    </div>
+                    <div class="textholder">
+                      <h3 class="vid-maintext">Easy Installation</h3>
+                      <p class="vid-subtext">Watch Now</p>
+                    </div>
+                  </div>
                 </div>
                 <div class= "col-sm-4">
-                  <div class="board3"></div>
+                  <div class="board3">
+                    <div class="playbutton">
+                      <img src="/img/play.png" alt="">
+                    </div>
+                    <div class="textholder">
+                      <h3 class="vid-maintext">24/7 Monitoring</h3>
+                      <p class="vid-subtext">Watch Now</p>
+                    </div>
+                  </div>
                 </div>
                 <div class= "col-sm-8">
-                  <div class="board4"></div>
+                  <div class="board4">
+                    <div class="playbutton">
+                      <img src="/img/play.png" alt="">
+                    </div>
+                    <div class="textholder">
+                      <h3 class="vid-maintext">Our lenses learns your lifestyle</h3>
+                      <p class="vid-subtext">Watch Now</p>
+                    </div>
+                  </div>
               </div>
             </div>
+          </div>
         </div>
-    </div>
+<!-------ALARMPAGE--------> 
+          <div class="container-fluid">
+              <div class="col-sm-12">
+                <div class="alarm-page">
+                  <div class="alarm_topdiv">
+                    <p class="alarm_toptext">Olarm Hub + Sensors + O’Clicker</p>
+                    <p class="alarm_maintext">Meet Olarm</p>
+                    <div class="alarm_box">
+                      <p class="smartsensor">Smart Sensor</p>
+                      <p class="sensortext">This is your first all-in-one sensor on the market. Motion, 
+                        Water Leak, Smoke Alarm, Temperature and Humidity 
+                        are some of the features that can be controlled through 
+                        this Smart Sensor.</p>
+                    </div>
+                  </div>
+                </div>
+            </div>
+          </div>
+
   </main>
 
     <script
