--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
       crossorigin="anonymous"
     />
     <link href="css/style.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+      integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm"
+      crossorigin="anonymous"
+    />
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap");
     </style>
@@ -20,131 +25,206 @@
     <header class="back-img">
       <div class="container">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="logo-div">
-              <img class="logo" src="/img/olarm_logo.png" />
-            </div>
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#navbarSupportedContent"
-              aria-controls="navbarSupportedContent"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-            >
-              <span class="navbar-toggler-icon"></span>
+          <div class="logo-div">
+            <img class="logo" src="/img/olarm_logo.png" />
+          </div>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#"
+                  >Features</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#"
+                  >Plans</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#"
+                  >Meet Olarm</a
+                >
+              </li>
+            </ul>
+            <button type="button" class="btn btn-primary btn-sm">
+              Sign up
             </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Home</a></li>
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Features</a></li>
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Plans</a></li>
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Meet Olarm</a></li>
-              </ul>
-              <button type="button" class="btn btn-primary btn-sm">Sign up</button>
-              <button type="button" class="btn btn-secondary btn-sm">Sign in</button>
-            </div>
+            <button type="button" class="btn btn-secondary btn-sm">
+              Sign in
+            </button>
+          </div>
         </nav>
-        <div class="row">
-          <div class="col-sm-12">
-            <div class="hero">
-                <div class="col-sm-1">
-                  <div class="hero-icons">
-                    <i class="fab fa-google"></i>
-                    <i class="fab fa-twitter"></i>
-                    <i class="fab fa-facebook-f"></i>
-                  </div>
-                </div>
-              <div class="col-sm-11">
-                <div class="first-quote">
-                  <h1 class="world-text">World's <span class="red">Smartest</span><span class="nextline">Home Security</span> </h1>
-                  <p class="small-text">Unique security experiences with more than 300,000 clients,
-                    <span class="nextline">Simple Installation, Convenience & Free Monitoring</span></p>
-                  <button type="button" class="btn btn-danger">Visit Shop</button>
+        <div class="col-sm-11">
+          <div class="first-quote">
+            <h1 class="world-text">
+              World's <span class="red">Smartest</span
+              ><span class="nextline">Home Security</span>
+            </h1>
+            <p class="small-text">
+              Unique security experiences with more than 300,000 clients,
+              <span class="nextline"
+                >Simple Installation, Convenience & Free Monitoring</span
+              >
+            </p>
+            <button type="button" class="btn btn-danger">Visit Shop</button>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="hero">
+            <div class="col-sm-1">
+              <div class="hero-icons">
+                <i class="fab fa-google"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-facebook-f"></i>
               </div>
             </div>
           </div>
         </div>
+      </div>
     </header>
-  <main>
-<!-------VIDPAGE--------> 
-    <div class="container">
-      <div class="vid_header">
-        <p class="vid-small-text">Tailored Total Home Protection</p>
-        <p class="vid-big-text">Next Generation Home Alarm System</p>
-        </div>
-            <div class="row">
-                <div class="col-sm-8">
-                  <div class="board1">
-                    <div class="playbutton">
-                      <img src="/img/play.png" alt="">
-                    </div>
-                    <div class="textholder">
-                      <h3 class="vid-maintext">Auto Arming | Das-arming</h3>
-                      <p class="vid-subtext">Watch Now</p>
-                    </div>
-                  </div>
-                </div>
-                <div class= "col-sm-4">
-                  <div class="board2">
-                    <div class="playbutton">
-                      <img src="/img/play.png" alt="">
-                    </div>
-                    <div class="textholder">
-                      <h3 class="vid-maintext">Easy Installation</h3>
-                      <p class="vid-subtext">Watch Now</p>
-                    </div>
-                  </div>
-                </div>
-                <div class= "col-sm-4">
-                  <div class="board3">
-                    <div class="playbutton">
-                      <img src="/img/play.png" alt="">
-                    </div>
-                    <div class="textholder">
-                      <h3 class="vid-maintext">24/7 Monitoring</h3>
-                      <p class="vid-subtext">Watch Now</p>
-                    </div>
-                  </div>
-                </div>
-                <div class= "col-sm-8">
-                  <div class="board4">
-                    <div class="playbutton">
-                      <img src="/img/play.png" alt="">
-                    </div>
-                    <div class="textholder">
-                      <h3 class="vid-maintext">Our lenses learns your lifestyle</h3>
-                      <p class="vid-subtext">Watch Now</p>
-                    </div>
-                  </div>
+    <main>
+      <!-------VIDPAGE-------->
+      <div class="container">
+        <div class="row">
+          <div class="vid_small">
+            <p class="vidtext1">Tailored Total Home Protection</p>
+            <p class="vidtext2">Next Generation Home Alarm System</p>
+          </div>
+          <div class="col-sm-8">
+            <div class="board1">
+              <div class="playbutton">
+                <img src="/img/play.png" alt="" />
+              </div>
+              <div class="textholder">
+                <h3 class="vid-maintext">Auto Arming | Das-arming</h3>
+                <p class="vid-subtext">Watch Now</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="board2">
+              <div class="playbutton">
+                <img src="/img/play.png" alt="" />
+              </div>
+              <div class="textholder">
+                <h3 class="vid-maintext">Easy Installation</h3>
+                <p class="vid-subtext">Watch Now</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="board3">
+              <div class="playbutton">
+                <img src="/img/play.png" alt="" />
+              </div>
+              <div class="textholder">
+                <h3 class="vid-maintext">24/7 Monitoring</h3>
+                <p class="vid-subtext">Watch Now</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-8">
+            <div class="board4">
+              <div class="playbutton">
+                <img src="/img/play.png" alt="" />
+              </div>
+              <div class="textholder">
+                <h3 class="vid-maintext">Our lenses learns your lifestyle</h3>
+                <p class="vid-subtext">Watch Now</p>
               </div>
             </div>
           </div>
         </div>
-<!-------ALARMPAGE--------> 
-          <div class="container-fluid">
-              <div class="col-sm-12">
-                <div class="alarm-page">
-                  <div class="alarm_topdiv">
-                    <p class="alarm_toptext">Olarm Hub + Sensors + O’Clicker</p>
-                    <p class="alarm_maintext">Meet Olarm</p>
-                    <div class="alarm_box">
-                      <p class="smartsensor">Smart Sensor</p>
-                      <p class="sensortext">This is your first all-in-one sensor on the market. Motion, 
-                        Water Leak, Smoke Alarm, Temperature and Humidity 
-                        are some of the features that can be controlled through 
-                        this Smart Sensor.</p>
-                    </div>
-                  </div>
-                </div>
+      </div>
+      <div class="container-fluid">
+        <div class="col-sm-12">
+          <div class="alarm-page">
+            <div class="alarm_topdiv">
+              <p class="alarm_toptext">Olarm Hub + Sensors + O’Clicker</p>
+              <p class="alarm_maintext">Meet Olarm</p>
+              <div class="alarm_box">
+                <p class="smartsensor">Smart Sensor</p>
+                <p class="sensortext">
+                  This is your first all-in-one sensor on the market. Motion,
+                  Water Leak, Smoke Alarm, Temperature and Humidity are some of
+                  the features that can be controlled through this Smart Sensor.
+                </p>
+              </div>
             </div>
           </div>
-
-  </main>
+        </div>
+      </div>
+      <!-------REDHOUSE-------->
+      <section class="redhouse-bcg">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-sm-12">
+              <div class="container">
+                <div class="col-sm-5">
+                  <div class="red_top">
+                    <p class="red_small_text">How Things Work!</p>
+                    <p class="red_main_text">
+                      Home Automation and Integrations
+                    </p>
+                    <p class="red_long_text">
+                      Let’s imagine you can control your entire home through
+                      voice command or even remotely through an app. But why
+                      imagine, when we can deliver. Connect and control your
+                      home now through our intuitive Olarm App
+                    </p>
+                  </div>
+                </div>
+                <div class="red_bottom">
+                  <img class="redpic" src="/img/ring.png" alt="" />
+                  <img class="redpic" src="/img/nest.png" alt="" />
+                  <img class="redpic" src="/img/googleass.png" alt="" />
+                  <img class="redpic" src="/img/amazon.png" alt="" />
+                  <img class="redpic" src="/img/arlo.png" alt="" />
+                </div>
+                <p class="red_small_text">Download our app!</p>
+                <img src="/img/googleplay.png" alt="" />
+                <img src="/img/appstore.png" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-------PROTECTIONS PLANS-------->
+      <section class="toogle-bcg">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-sm-12">
+              <div class="protection_header_div">
+                <h1 class="protection_head">Protection Plans</h1>
+                <div class="form-check form-switch">
+                  <input
+                    class="form-check-input"
+                    type="checkbox"
+                    id="flexSwitchCheckDefault"
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
