--- a/index.html
+++ b/index.html
@@ -209,21 +209,121 @@
       <section class="toogle-bcg">
         <div class="container-fluid">
           <div class="row">
-            <div class="col-sm-12">
+            <div class="col-sm-3 mx-auto">
               <div class="protection_header_div">
                 <h1 class="protection_head">Protection Plans</h1>
-                <div class="form-check form-switch">
-                  <input
-                    class="form-check-input"
-                    type="checkbox"
-                    id="flexSwitchCheckDefault"
-                  />
+                <div class="switchbox">
+                  <p>Monthly</p>
+                  <div class="form-check form-switch">
+                    <input
+                      class="form-check-input"
+                      type="checkbox"
+                      id="flexSwitchCheckDefault"
+                    />
+                  </div>
+                  <p>Yearly</p>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </section>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-4">
+            <div class="whitecard whitecard__one">
+              <div class="whitecard__top">
+                <p class="card_header">Professioanl</p>
+                <i class="fas whitecard_stars fa-star"></i>
+                <i class="fas whitecard_stars fa-star"></i>
+                <i class="fas whitecard_stars fa-star"></i>
+                <p class="white_pricetag">$09.00</p>
+                <p class="permonth">per month</p>
+              </div>
+              <div class="prot_cardinfo">
+                <i class="fas checkmark fa-check"></i>Self monitoring via app
+                <p>
+                  <i class="fas checkmark fa-check"></i>Add a trusted friend/
+                  family member
+                </p>
+                <p>
+                  <i class="fas checkmark fa-check"></i>Selies on Wi-Fi
+                  connection
+                </p>
+                <p>
+                  <i class="fas checkmark fa-check"></i>Cellular failover in
+                  case of Wi-Fi interruptions
+                </p>
+                <p>
+                  <i class="fas checkmark fa-check"></i>24/7 Professional
+                  monitoring
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="redcard">
+              <div class="whitecard__top">
+                <p class="card_header">Cellular</p>
+                <i class="fas whitecard_stars fa-star"></i>
+                <i class="fas whitecard_stars fa-star"></i>
+                <i class="fas whitecard_stars fa-star"></i>
+                <p class="white_pricetag">$05.00</p>
+                <p class="permonth">per month</p>
+              </div>
+
+              <div class="prot_cardinfo">
+                <i class="fas whitecheckmark fa-check"></i>Self monitoring via
+                app
+                <p>
+                  <i class="fas whitecheckmark fa-check"></i>Add a trusted
+                  friend/ family member
+                </p>
+                <p>
+                  <i class="fas whitecheckmark fa-check"></i>Selies on Wi-Fi
+                  connection
+                </p>
+                <p>
+                  <i class="fas whitecheckmark fa-check"></i>Cellular failover
+                  in case of Wi-Fi interruptions
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-sm-4">
+            <div class="whitecard__two">
+              <div class="whitecard__top">
+                <p class="card_header">Professioanl</p>
+                <i class="fas whitecard_stars fa-star"></i>
+                <i class="fas whitecard_stars fa-star"></i>
+                <i class="fas whitecard_stars fa-star"></i>
+                <p class="white_pricetag">$09.00</p>
+                <p class="permonth">per month</p>
+              </div>
+              <div class="prot_cardinfo">
+                <i class="fas checkmark fa-check"></i>Self monitoring via app
+                <p>
+                  <i class="fas checkmark fa-check"></i>Add a trusted friend/
+                  family member
+                </p>
+                <p>
+                  <i class="fas checkmark fa-check"></i>Selies on Wi-Fi
+                  connection
+                </p>
+                <p>
+                  <i class="fas checkmark fa-check"></i>Cellular failover in
+                  case of Wi-Fi interruptions
+                </p>
+                <p>
+                  <i class="fas checkmark fa-check"></i>24/7 Professional
+                  monitoring
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
 
     <script
